kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mankahi
  labels:
    name: mankahi
